fix css on feedback

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -10,3 +10,10 @@ body {
 input:focus {
   outline:none;
 }
+input[type=number] {
+	-moz-appearance:textfield;
+}
+input[type="number"]:hover,
+input[type="number"]:focus {
+	-moz-appearance: number-input;
+}
