--- a/pages/styles.css
+++ b/pages/styles.css
@@ -2,18 +2,36 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: 'Montserrat', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+	font-family: 'Inter', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 	background-color: #000;
 	overflow-y: hidden;
 	overflow-x: hidden;
+	font-stretch: normal;
+	font-style: normal;
+	letter-spacing: normal;
 }
+
 input:focus {
-  outline:none;
+	outline: none;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+/* Firefox */
 input[type=number] {
-	-moz-appearance:textfield;
+	-moz-appearance: textfield;
 }
+
 input[type="number"]:hover,
 input[type="number"]:focus {
 	-moz-appearance: number-input;
+}
+
+a {
+	text-decoration: none;
 }
