--- a/pages/styles.css
+++ b/pages/styles.css
@@ -3,15 +3,18 @@ body {
 	padding: 0;
 	margin: 0;
 	font-family: 'Inter', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-	/* background-color: #000; */
-	background-image: linear-gradient(141deg, #8d7ba4 20%, #6d1597 128%);
-
+	background-color: #000;
+	/* background-image: linear-gradient(141deg, #8d7ba4 20%, #6d1597 128%);
+	background-size: 370px 100%;
+	background-position: 50% 100px;
+	background-repeat: no-repeat; */
 	overflow-y: hidden;
 	overflow-x: hidden;
 	font-stretch: normal;
 	font-style: normal;
 	letter-spacing: normal;
 }
+
 
 input:focus {
 	outline: none;
@@ -36,4 +39,5 @@ input[type="number"]:focus {
 
 a {
 	text-decoration: none;
+	text-decoration-color: transparent;
 }
