remove selection border

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -43,3 +43,12 @@ a {
 	text-decoration: none;
 	text-decoration-color: transparent;
 }
+
+/* recharts */
+.recharts-layer.recharts-pie,
+.recharts-pie-sector:focus {
+	outline: none !important;
+	outline-color: none;
+	outline-style: none;
+	outline-width: none;
+}
